[metadata]
name = mdforce
version = 0.0.0
author = Armin Ariamajd
author_email = a.ariamajd@gmail.com
description = MDForce is a package to calculate the force field, potential energy and related data in molecular dynamics simulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Armin-Ariamajd/mdforce
project_urls =
    Bug Tracker = https://github.com/Armin-Ariamajd/mdforce/issues
license = GNU Affero General Public License v3
license_file = LICENSE
platform = any
keywords = Molecular dynamics, MD, MD simulation, force field, potential energy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Natural Language :: English
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires = numpy>=1.17; pandas
include_package_data = true

[options.packages.find]
where = .